--- a/template/page-case-calibradora.html
+++ b/template/page-case-calibradora.html
@@ -382,11 +382,11 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
+              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Produtividade de até 600 kg/hora;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220 V;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>É necessário instalar/ter linha de ar comprimido;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
             </ul>
           </div>
         </div>
