--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -376,11 +376,11 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Velocidade de 3600 mudas por hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 separações (5 classificações + 1 refugo);</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Utiliza alimentação da rede comum (220V);</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Aceita qualquer tipo de muda gerada por estaquia.</li>
+              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Velocidade de 3600 mudas por hora;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Até 6 separações (5 classificações + 1 refugo);</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Utiliza alimentação da rede comum (220V);</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>É necessário instalar/ter linha de ar comprimido;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Aceita qualquer tipo de muda gerada por estaquia.</li>
             </ul>
           </div>
         </div>
