--- a/template/page-case-sistema-qualificacao-uvas.html
+++ b/template/page-case-sistema-qualificacao-uvas.html
@@ -276,45 +276,43 @@
             <h3 class="title-subsection">Como funciona</h3>
             <div class="separator-2"></div> 
             <div class="row mt-60">
-              <div class="col-lg-6 col-md-6 m-auto">
+              <!--<div class="col-lg-6 col-md-6 m-auto">
                 <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
-              </div>
-            <div class="col-lg-6 col-md-6">
-              <div class="row">
+              </div>-->
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">01. Calibração</h4>
+                  <h4 class="how-works-title">01. Descarregamento</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                  <p class="how-works-text text-justify">O caminhão que transporta as uvas é descarregado no lagar.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">02. Alimentação</h4>
+                  <h4 class="how-works-title">02. Imagem</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                  <p class="how-works-text text-justify">Uma câmera industrial captura imagens do fluxo de uvas que está sendo descarregado.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">03. Imagem</h4>
+                  <h4 class="how-works-title">03. Processamento</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                  <p class="how-works-text text-justify">As imagens são processadas através de um software que analisa parâmetros de maturidade das uvas.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Classificação</h4>
+                  <h4 class="how-works-title">04. Relatório</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Texto descritivo?</p>
+                  <p class="how-works-text text-justify">O sistema de qualificação finaliza o processo gerando um relatório de qualidade.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        </div>
         <!-- section how works end -->
 
-      <!-- section benefits start -->
+            <!-- section benefits start -->
       <div class="dark-bg pv-70 section">
         <div class="container">
           <div class="row">      
@@ -322,8 +320,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
-                  <h4 class="title">Ensaio não destrutivo</h4>
-                  <p>Texto descritivo??</p>
+                  <h4 class="title">Controle de qualidade</h4>
+                  <p>O sistema de qualificação remove as uvas com imperfeições na forma ou na casca, e também aquelas com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 5 níveis de qualidade garante uma padronização excepcional.</p>
                 </div>
               </div>
             </div>
@@ -331,8 +329,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
-                  <h4 class="title">Análise de todos os produtos</h4>
-                  <p>Texto descritivo??</p>
+                  <h4 class="title">Redução de mão-de-obra</h4>
+                  <p>O sistema elimina a necessidade de inspeção e separação manual dos produtos, realizando a classificação com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
                 </div>
               </div>
             </div>
@@ -340,8 +338,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
-                  <h4 class="title">Processo automatizado</h4>
-                  <p>Texto descritivo??</p>
+                  <h4 class="title">Configuração automática</h4>
+                  <p>O critério de classificação da máquina pode ser ajustado a partir de exemplos separados por você. Capacidade ilimitada para o armazenamento de configurações. Crie treinos para separar seus frutos nos mais variados estágios de desenvolvimento da planta.</p>
                 </div>
               </div>
             </div>
@@ -349,8 +347,8 @@
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
-                  <h4 class="title">Análise em tempo real</h4>
-                  <p>Texto descritivo??</p>
+                  <h4 class="title">Relatórios detalhados</h4>
+                  <p>Os sistemas de qualificação da MVISIA garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
                 </div>
               </div>
             </div>
@@ -359,7 +357,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
-                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
+                  <p>A MVISIA é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
                 </div>
               </div>
             </div>
@@ -375,9 +373,10 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Capacidade de analisar toneladas de uvas por minuto;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Distância variável, de 0,5m até 8m;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
+              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Qualifica em até 5 níveis de qualidade.;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Distância focal de 5mm a 50mm;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Garantia de 12 meses;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220V.</li>
             </ul>
           </div>
         </div>
