--- a/template/page-case-seletora-mudas-eucalipto.html
+++ b/template/page-case-seletora-mudas-eucalipto.html
@@ -375,11 +375,11 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 2.200 mudas/hora;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classes de seleção;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
+              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Produtividade de até 2.200 mudas/hora;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Até 6 classes de seleção;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220 V;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>É necessário instalar/ter linha de ar comprimido;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
             </ul>
           </div>
         </div>
