--- a/template/404.html
+++ b/template/404.html
@@ -257,7 +257,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
