--- a/template/page-case-calibradora.html
+++ b/template/page-case-calibradora.html
@@ -267,7 +267,7 @@
         <div class="light-gray-bg pv-70 section mt-60">
           <div class="container">
             <h3 class="title-subsection">Veja em funcionamento</h3>
-            <div class="separator-2"></div>
+            <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -357,7 +357,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
-                  <p>As calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
+                  <p>As calibradoras eletrônicas da MVISIA garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
                 </div>
               </div>
             </div>
@@ -366,7 +366,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
-                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
+                  <p>A MVISIA é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
                 </div>
               </div>
             </div>
@@ -432,7 +432,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
