--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -261,7 +261,7 @@
         <div class="light-gray-bg pv-70 section mt-60">
           <div class="container">
             <h3 class="title-subsection">Veja em funcionamento</h3>
-            <div class="separator-2"></div>
+            <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe src="https://player.vimeo.com/video/95206246" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -360,7 +360,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
-                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
+                  <p>A MVISIA é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
                 </div>
               </div>
             </div>
@@ -426,7 +426,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
