--- a/template/page-case-sistema-qualificacao-uvas.html
+++ b/template/page-case-sistema-qualificacao-uvas.html
@@ -260,7 +260,7 @@
         <!--<div class="light-gray-bg pv-70 section mt-60">
           <div class="container">
             <h3 class="title-subsection">Veja em funcionamento</h3>
-            <div class="separator-2"></div>
+            <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -400,8 +400,8 @@
     </div>
     <!-- page-wrapper end -->
 
-       <!-- footer start -->
-       <footer id="footer" class="clearfix dark">
+      <!-- footer start -->
+      <footer id="footer" class="clearfix dark">
         <div class="footer">
           <div class="container">
             <div class="footer-inner">
@@ -422,7 +422,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
