--- a/template/page-about.html
+++ b/template/page-about.html
@@ -233,7 +233,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 text-justify">
-                <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
+                <p>A MVISIA desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
                 <p>O princípio de nossas soluções é um <strong>sistema de visão</strong> que captura imagens de cada unidade e as envia para um software fazer a análise, levando em consideração os parâmetros importantes para a seleção de cada produto. Desenvolvemos também a <strong>estrutura mecatrônica</strong> capaz de operacionalizar o processo com produtividade necessária para o cliente.</p>
                 <p>A empresa existe desde 2012, quando foi incubada no CIETEC-USP, e já desenvolveu soluções para os setores de <strong>hortifruti, flores e mudas florestais</strong>. Tivemos dois dos nossos projetos financiados pela FAPESP e também mantemos estreitas relações com o ecossistema de inovação, com diversos prêmios ganhos, como o <strong>Prêmio Santander de Empreendedorismo</strong> e o <strong>Prêmio Odebrecht Sustentabilidade</strong>.</p> 
               </div>
@@ -569,7 +569,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
