--- a/template/page-case-seletora-mudas-eucalipto.html
+++ b/template/page-case-seletora-mudas-eucalipto.html
@@ -255,12 +255,13 @@
           </div>
         </div>
         <!-- section text end -->
+        
 
         <!-- section video start -->
         <div class="light-gray-bg pv-70 section mt-60">
           <div class="container">
             <h3 class="title-subsection">Veja em funcionamento</h3>
-            <div class="separator-2"></div>
+            <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RgVQlLvY89c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -270,47 +271,45 @@
         </div>
         <!-- section video end -->
 
-        <!-- section how works start -->
+                <!-- section how works start -->
         <div class="mt-20 pv-70 ph-20 section">
           <div class="container">
             <h3 class="title-subsection">Como funciona</h3>
             <div class="separator-2"></div> 
             <div class="row mt-60">
-              <div class="col-lg-6 col-md-6 m-auto">
+              <!--<div class="col-lg-6 col-md-6 m-auto">
                 <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
-              </div>
-            <div class="col-lg-6 col-md-6">
-              <div class="row">
+              </div>-->
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">01. Alimentação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Um operador coloca as muda em suportes especialmente desenvolvidos para este equipamento, todo processo posterior é feito automaticamente.</p>
+                  <p class="how-works-text">Um operador coloca as muda em suportes especialmente desenvolvidos para este equipamento, todo processo posterior é feito automaticamente.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">02. Imagem</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Após a singularização das mudas na esteira, a seletora captura uma foto de cada muda individualmente.</p>
+                  <p class="how-works-text">Após a singularização das mudas na esteira, a seletora captura uma foto de cada muda.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">03. Classificação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Por meio de um algoritmo sofisticado, a seletora avalia os parâmetros de interesse de cada muda, definidos pelo operador. Uma vez definida a classe da muda, ela é empurrada para seu respectivo compartimento.</p>
+                  <p class="how-works-text">A seletora avalia os parâmetros de interesse de cada muda, definidos pelo operador. Uma vez definida a classe da muda, ela é empurrada para seu respectivo compartimento.</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="col-lg-3 col-md-3">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">04. Configuração</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">Os critérios de seleção são totalmente personalizáveis, o que garante uma padronização de acordo com as necessidades de cada produtor.</p>
+                  <p class="how-works-text">Os critérios de seleção são totalmente personalizáveis, o que garante uma padronização de acordo com as necessidades de cada produtor.</p>
                 </div>
               </div>
             </div>
           </div>
-        </div>
         </div>
         <!-- section how works end -->
 
@@ -350,7 +349,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
-                  <p>As máquinas seletoras da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
+                  <p>As máquinas seletoras da MVISIA garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, entre outras informações).</p>
                 </div>
               </div>
             </div>
@@ -359,7 +358,7 @@
                 <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
-                  <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
+                  <p>A MVISIA é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
                 </div>
               </div>
             </div>
@@ -425,7 +424,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
