--- a/template/page-tech-inteligencia-artificial.html
+++ b/template/page-tech-inteligencia-artificial.html
@@ -288,8 +288,8 @@
     </div>
     <!-- page-wrapper end -->
 
-       <!-- footer start -->
-       <footer id="footer" class="clearfix dark">
+      <!-- footer start -->
+      <footer id="footer" class="clearfix dark">
         <div class="footer">
           <div class="container">
             <div class="footer-inner">
@@ -310,7 +310,7 @@
                       <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
                     </ul>
                     <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    <p class="text-center margin-clear">©2018 MVISIA. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
