--- a/template/page-tech-cameras-hiperespectrais.html
+++ b/template/page-tech-cameras-hiperespectrais.html
@@ -239,7 +239,7 @@
               <div class="col-lg-6">
                 <div class="special-container">
                   <div class="overlay-container overlay-visible rounded">
-                    <img src="images/page-tech-3-1.png" alt="hiperespectrais-1">
+                    <img src="images/page-tech-1-1.jpg" alt="hiperespectrais-1">
                   </div>
                 </div>
               </div>
