--- a/template/page-tech-visao-computacional.html
+++ b/template/page-tech-visao-computacional.html
@@ -238,7 +238,7 @@
               <div class="col-lg-6">
                 <div class="special-container">
                   <div class="overlay-container overlay-visible rounded">
-                    <img src="images/page-tech-3-1.png" alt="hiperespectrais-1">
+                    <img src="images/page-tech-2-1.jpg" alt="hiperespectrais-1">
                   </div>
                 </div>
               </div>
