--- a/template/page-about.html
+++ b/template/page-about.html
@@ -113,7 +113,7 @@
                 <div id="header-top-second"  class="clearfix text-right">
                   <ul class="list-inline">
                     <li class="list-inline-item hidden-md-down">Realizamos projetos sob medida para o seu negócio.</li>
-                    <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia</li>
+                    <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia.com.br</li>
                     <li class="list-inline-item"><i class="fa fa-phone pr-1 pl-10 text-default"></i>(+55) (11) 4302-5902</li>
                     <li class="list-inline-item"><i class="fa fa-whatsapp pr-1 pl-10 text-default"></i>(+55) (11) 98134-9727</li>
                   </ul>
@@ -308,7 +308,7 @@
                 <div class="col-md-4 mb-30">
                   <div class="pv-30 ph-30 feature-box bordered shadow text-center object-non-visible mb-20 h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <img class="logo-prize mlr-auto mb-60 mt-10" src="images/prize-1.svg"></span>
-                    <h4 class="card-title">Academic Working Capital</h4>
+                    <h4 class="card-title">Academic Working Capital (Instituto TIM)</h4>
                     <div class="separator clearfix"></div>
                     <p>Financiamento para o protótipo da Seletora de Mudas de Eucalipto.</p>
                   </div>
@@ -316,7 +316,7 @@
                 <div class="col-md-4 mb-30">
                   <div class="pv-30 ph-30 feature-box bordered shadow text-center object-non-visible mb-20 h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <img class="logo-prize mlr-auto mb-60 mt-10" src="images/prize-2.svg"></span>
-                    <h4 class="card-title">Prêmio Santander</h4>
+                    <h4 class="card-title">Prêmio Santander de Empreendedorismo 2015</h4>
                     <div class="separator clearfix"></div>
                     <p>Projeto Seletora de mudas de eucalipto. Vencedor entre mais de 24.000 inscritos.</p>
                   </div>
@@ -332,7 +332,7 @@
                 <div class="col-md-4 mb-30">
                   <div class="pv-30 ph-30 feature-box bordered shadow text-center object-non-visible mb-20 h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <img class="logo-prize mlr-auto mb-60 mt-10" src="images/prize-4.svg"></span>
-                    <h4 class="card-title">Prêmio Odebrecht</h4>
+                    <h4 class="card-title">Prêmio Odebrecht 2016</h4>
                     <div class="separator clearfix"></div>
                     <p>Seletora de Mudas de Cana-de-açúcar. Vencedor entre mais de 250 projetos.</p>
                   </div>
@@ -348,9 +348,9 @@
                 <div class="col-md-4 mb-30">
                   <div class="pv-30 ph-30 feature-box bordered shadow text-center object-non-visible mb-20 h-100" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <img class="logo-prize mlr-auto mb-60 mt-10" src="images/prize-6.svg"></span>
-                    <h4 class="card-title">Pipe Fase 3 (2018)</h4>
+                    <h4 class="card-title">FAPESP e FINEP - Pipe Fase 3</h4>
                     <div class="separator clearfix"></div>
-                    <p>Visão computacional para seleção de MPB de cana-de-açúcar. Aporte a fundo perdido.</p>
+                    <p>Projeto Máquina baseada em visão computacional para seleção de MPB de cana-de-açúcar.</p>
                   </div>
                 </div>
               </div>
@@ -383,7 +383,7 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Fernando Lopes</h4>
-                    <h6>(Engenharia Mecatrônica POLI-USP)</h6>
+                    <h6>Engenharia Mecatrônica @POLI-USP</h6>
                     <h5 class="mt-20">Financeiro e Operacional Interno</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -408,7 +408,7 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Fernando Velloso</h4>
-                    <h6>(Engenharia Mecatrônica POLI-USP)</h6>
+                    <h6>Engenharia Mecatrônica @POLI-USP</h6>
                     <h5 class="mt-20">Comercial e Relações Externas</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -433,7 +433,7 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Henrique Oliveira</h4>
-                    <h6>(Engenharia Mecatrônica POLI-USP)</h6>
+                    <h6>Engenharia Mecânica @POLI-USP</h6>
                     <h5 class="mt-20">Execução e Gestão de Projetos</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -458,7 +458,7 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Felipe Hernandez</h4>
-                    <h6>(Ms. Ciências e Eng. Mecânica EESC-USP)</h6>
+                    <h6>Ms. Ciências e Eng. Mecânica @EESC-USP</h6>
                     <h5 class="mt-20">Sistemas de Visão Computacional</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
@@ -482,8 +482,8 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Cassiano Casagrande</h4>
-                    <h6>(Ciências da Computação ICMC-USP)</h6>
-                    <h5 class="mt-20">Gerenciamento de Softwares</h5>
+                    <h6>Ciências da Computação @ICMC-USP</h6>
+                    <h5 class="mt-20">Desenv. de Softwares de I.A.</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
                       <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/cassiano-kleinert-casagrande-094196a8/"><i class="fa fa-linkedin"></i></a></li>
@@ -506,8 +506,8 @@
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Lucas Julio</h4>
-                    <h6>(Engenharia Elétrica POLI-USP)</h6>
-                    <h5 class="mt-20">Algoritmos Machine Learning</h5>
+                    <h6>Engenharia Elétrica @POLI-USP</h6>
+                    <h5 class="mt-20">Algoritmos de Machine Learning</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
                       <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/lucas-ribeiro-ferreira-julio-b65709149/"><i class="fa fa-linkedin"></i></a></li>
@@ -525,15 +525,14 @@
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Graduando em Mecatrônica no SENAI</li>
                         <li class="mt-small text-left"><i class="fa fa-check"></i> Vasto conhecimentos em T.I. e projetos mecânicos</li>
                         <li class="mt-small text-left"><i class="fa fa-check"></i> Atuou por 10 anos no setor industrial como ferramenteiro</li>
-                        <li class="mt-10 text-left"><i class="fa fa-check"></i> Gerente de projeto de software</li>
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Experiência com montagem e manutenção de hardwares</li>
                       </ul>
                     </div>
                   </div>
                   <div class="body">
                     <h4 class="card-title margin-clear">Álefe Rocha</h4>
-                    <h6>(Ciências da Computação UNINOVE)</h6>
-                    <h5 class="mt-20">Projetos Mecânicos</h5>
+                    <h6>Mecatrônica @SENAI</h6>
+                    <h5 class="mt-20">Projetos Mecatrônicos</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
                       <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/aleferocha/"><i class="fa fa-linkedin"></i></a></li>
