--- a/template/css/style.css
+++ b/template/css/style.css
@@ -104,6 +104,7 @@ ul {
 
 .footer-content {
   padding: 20px 0;
+  color: rgba(255, 255, 255, 0.75);
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -611,7 +612,7 @@ h5 + .separator {
 ---------------------------------- */
 .header-top {
   font-size: 12px;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.85);
   font-weight: 300;
 }
 
@@ -1767,9 +1768,9 @@ h5 + .separator {
 }
 
 .footer-content .social-links li a {
-  color: #777777;
+  color: #ffffff;
   background-color: transparent;
-  border-color: #777777;
+  border-color: #ffffff;
 }
 
 .footer-content .social-links li a:hover {
