--- a/template/page-case-calibradora.html
+++ b/template/page-case-calibradora.html
@@ -113,7 +113,7 @@
                 <div id="header-top-second"  class="clearfix text-right">
                   <ul class="list-inline">
                     <li class="list-inline-item hidden-md-down">Realizamos projetos sob medida para o seu negócio.</li>
-                    <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia</li>
+                    <li class="list-inline-item"><i class="fa fa-envelope-o pr-1 pl-10 text-default"></i>contato@mvisia.com.br</li>
                     <li class="list-inline-item"><i class="fa fa-phone pr-1 pl-10 text-default"></i>(+55) (11) 4302-5902</li>
                     <li class="list-inline-item"><i class="fa fa-whatsapp pr-1 pl-10 text-default"></i>(+55) (11) 98134-9727</li>
                   </ul>
@@ -235,7 +235,7 @@
               <div class="col-lg-6 text-justify mb-30">
                 <p>Nossa calibradora eletrônica classifica os frutos em diversos tamanhos, além de remover os verdes e os com defeitos, trazendo mais qualidade e padronização para os seus produtos.</p>
                 <p>Obtenha ótimos resultados com qualquer variedade de tomates miúdos, como o grape, morgado, tomini, rosso, etc.</p>
-                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>90.000 tomates por hora.</strong></p>
+                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>30.000 tomates por hora.</strong></p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
@@ -270,7 +270,7 @@
             <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/UKaf0GIe-Dk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
           </div>
