--- a/template/page-case-seletora-mudas-eucalipto.html
+++ b/template/page-case-seletora-mudas-eucalipto.html
@@ -264,7 +264,7 @@
             <div class="separator-2 mb-60"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RgVQlLvY89c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3FcO7A2zs_c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
           </div>
